# CLMM-Liquidity-Provider

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
Docker/: web.Dockerfile
crates/api/: Cargo.toml
crates/api/src/: auth.rs  lib.rs  openapi.rs  prelude.rs  server.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/data/: Cargo.toml
crates/data/migrations/: 001_initial_schema.sql  002_add_positions.sql
crates/data/src/: lib.rs  prelude.rs
crates/data/src/repositories/: mod.rs  pool_repository.rs  price_repository.rs  simulation_repository.rs
crates/domain/: Cargo.toml
crates/domain/src/: enums.rs  fees.rs  lib.rs  pool.rs  position.rs  token.rs
crates/domain/src/entities/: mod.rs  pool.rs  position.rs  price_candle.rs  token.rs
crates/domain/src/math/: concentrated_liquidity.rs  constant_product.rs  mod.rs  price_tick.rs
crates/domain/src/metrics/: fees.rs  impermanent_loss.rs  mod.rs
crates/domain/src/value_objects/: amount.rs  mod.rs  optimization_result.rs  percentage.rs  price.rs  price_range.rs  simulation_result.rs
crates/execution/: Cargo.toml
crates/execution/src/: lib.rs  prelude.rs
crates/execution/src/emergency/: circuit_breaker.rs  emergency_exit.rs  mod.rs
crates/execution/src/lifecycle/: events.rs  mod.rs  tracker.rs
crates/execution/src/scheduler/: mod.rs
crates/execution/src/strategy/: executor.rs  mod.rs  rebalance.rs
crates/execution/src/sync/: account_listener.rs  mod.rs  reconciler.rs
crates/optimization/: Cargo.toml
crates/optimization/src/: lib.rs  objective.rs  range_optimizer.rs
crates/protocols/: Cargo.toml
crates/protocols/src/: lib.rs  prelude.rs  solana_client.rs
crates/protocols/src/orca/: executor.rs  mod.rs  provider.rs  whirlpool.rs
crates/protocols/src/raydium/: mod.rs
crates/protocols/src/rpc/: provider.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: engine.rs  event.rs  lib.rs  liquidity.rs  monte_carlo.rs  position_simulator.rs  position_tracker.rs  prelude.rs  price_path.rs  state.rs  strategy_simulator.rs  volume.rs
crates/simulation/src/strategies/: mod.rs  periodic.rs  static_range.rs  threshold.rs
web/: README.md  index.html  package.json  tailwind.config.js
web/src/: App.tsx
web/src/components/: Layout.tsx
web/src/components/ui/: toaster.tsx
web/src/hooks/: use-toast.ts
web/src/lib/: api.ts  utils.ts  websocket.ts
web/src/pages/: Dashboard.tsx  PoolDetail.tsx  Pools.tsx  PositionDetail.tsx  Positions.tsx  Settings.tsx  Strategies.tsx  StrategyDetail.tsx
