[package]
name = "amm-data"
version = "0.1.0"
edition = "2024"

[dependencies]
amm-domain = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
primitive-types = { workspace = true }
rust_decimal = { workspace = true }
