[package]
name = "amm-execution"
version = "0.1.0"
edition = "2024"

[dependencies]
amm-domain = { workspace = true }
amm-protocols = { workspace = true }
amm-optimization = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
