[package]
name = "amm-protocols"
version = "0.1.0"
edition = "2024"

[dependencies]
amm-domain = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
borsh = "1.5"
primitive-types = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
